# kc705

./: .gitignore  CMakeLists.txt  Firmware_Info.md  README.md  build_env.bat  build_env.sh  build_env_mingw.bat  build_swig.bat  daq.cpp  daq.h  daq2.cpp  daq2.h  setup.py  xillybus.v  xillybus_core.v  xillycapture.v  xillydemo.v
analysis/: CMakeLists.txt  Decode.hh  JadepixDecoder.py  JadipixDecoder.py  decode.sh  decode2root.cc  define_hist.hh  run_decode.sh
analysis/.ropeproject/: globalnames
analysis/include/: Decode.hh
analysis/macro/: process_events_add.cxx
doc/: EUDAQ_with_JadePixDAQ_quick_tutorial.md  Firmware_v1.1.1_Info.md  Firmware_v1.1_Info.md  Firmware_v1.2_Info.md  Firmware_v1.3.md  Firmware_v1.3_Info.md  Jadepix DAQ User Guide.docx  eudaq_run.md
doc/LaTEX for Jadepix DAQ User Guide/: Jadepix DAQ User Guide.tex
fpga/: create_project.tcl  kc705.v  kc705.xdc  kc705_v1.0.xpr
fpga/Const/: kc705.xdc
fpga/Const/new/: kc705.xdc
fpga/HDL.Sim/: test_bench_kc705.v  tlu_testbench.v
fpga/HDL/adc/: ADC_REC_LVDS.edf  ADC_REC_LVDS.xdc  ADC_REC_LVDS_stub.v  ADC_test.v  CPS_ReadOut_TOP.edf  CPS_ReadOut_TOP.xdc  CPS_ReadOut_TOP_stub.v
fpga/HDL/user_module/: addr_decoder.v  adj_cnvclk.v  d_ff.v  data_selector.v  (+18 more)
fpga/ILA/: iladata.ila
gui/: GuiDemo.e4p  JadePixel.ui  JadePixelControl.py  JadePixelOnlineControl.py  OfflineAnalysis.py  OnlineAnalysis.py  README.md  emulate_device.py  offlineAna.py  runSimControl.py  runSimControl.ui  runcontrol.py  runcontrol.ui
gui-dev/: JadePixelControl.py
gui/_eric6project/: GuiDemo.e4q  GuiDemo.e6t
include/: daq.h  daq_private.h
jadePixAnalysis/: CMakeLists.txt  build_env.bat
jadePixAnalysis/include/: Wrappixelana.hh  wrapdecode2root.hh
jadePixAnalysis/macro/: decode.py  tmp.root
jadePixAnalysis/src/: Wrappixelana.cc  wrapdecode2root.cc
jadePixAnalysis/swig/: decode2root.i  setup.py
jadePixAnalysis/swig/python/: CMakeLists.txt  setup.py.in
onlineAnalysis/: CMakeLists.txt
onlineAnalysis/include/: JadepixDecoder.hh  JadepixDigi.hh  JadepixFrame.hh
onlineAnalysis/macros/: runDecoder.py
onlineAnalysis/src/: JadepixDecoder.cpp  JadepixFrame.cpp
onlineAnalysis/swig/: jadepix.i
python/: README.md  emulate_device.py  fakedata.py  notes.md  pixeldata.py  pydaq.py  pyqtmatnav.py  readPixelData.py  runcontrol.py  runcontrol.ui  speed_test.py  test_daq2_module.py  test_daq_module.py
script/analysis/: CMOS.cc  CMOS.hh  Decode.cc  Makefile  pixelana.cc
script/gui/: JadePixelControl.py  emulate_device.py  emulate_device_linux.py  monitor.py  pixeldata.py  qtthreadutils.py  run.py  runcontrol.py  runcontrol.ui  speed_test.py
software/: CMakeLists.txt
software/conf/: sample.json  sample_gui.json  sample_summer.json  sample_summer_gui.json  sample_summer_tlu.json
software/exe/: CMakeLists.txt
software/exe/src/: ManagerTest.cxx  OptionTest.cxx  ReaderTest.cxx  SystemTest.cxx
software/gui/: CMakeLists.txt
software/gui/app/: main_gui.cxx
software/gui/form/: mainwindow.ui
software/gui/include/: GUIManager.hh  GUIMonitor.hh  GUIObject.hh  mainwindow.h  monitor.hh
software/gui/linux/: CMakeLists.txt
software/gui/linux/app/: main_gui.cxx
software/gui/linux/form/: mainwindow.ui
software/gui/linux/include/: GUIManager.hh  GUIMonitor.hh  QRootCanvas.hh  mainwindow.h
software/gui/linux/src/: GUIManager.cxx  GUIMonitor.cxx  QRootCanvas.cxx  mainwindow.cpp
software/gui/src/: GUIManager.cxx  GUIMonitor.cxx  GUIObject.cpp  mainwindow.cpp  monitor.cxx
software/gui/windows/: CMakeLists.txt
software/gui/windows/app/: main_gui.cxx
software/lib/: CMakeLists.txt
software/lib/core/: CMakeLists.txt
software/lib/core/include/: JadeCore.hh  JadeDataFrame.hh  JadeDecode.hh  JadeDump.hh  JadeFactory.hh  JadeFilter.hh  JadeManager.hh  JadeMonitor.hh  JadeOption.hh  JadePost.hh  JadeRead.hh  JadeReader.hh  JadeRegCtrl.hh  JadeSystem.hh  JadeUtils.hh  JadeWrite.hh  JadeWriter.hh  daq.h  daq_private.h
software/lib/core/pybind11/: CMakeLists.txt
software/lib/core/pybind11/include/: JadeDataFrame_Pybind11.hh  JadeFilter_Pybind11.hh  JadeManager_Pybind11.hh  JadeRead_Pybind11.hh  JadeReader_Pybind11.hh  JadeRegCtrl_Pybind11.hh  JadeWrite_Pybind11.hh  JadeWriter_Pybind11.hh
software/lib/core/pybind11/src/: JadeDataFrame_Pybind11.cc  JadeFilter_Pybind11.cc  JadeManager_Pybind11.cc  JadePybind11.cc  JadeReader_Pybind11.cc  JadeRegCtrl_Pybind11.cc  JadeWrite_Pybind11.cc  JadeWriter_Pybind11.cc
software/lib/core/src/: CdsFilter.cc  CdsWriter.cc  DataTakingThread.cpp  JadeDataFrame.cc  JadeDecode.cc  JadeDump.cc  JadeFilter.cc  JadeManager.cc  JadeMonitor.cc  JadeOption.cc  JadePost.cc  JadeRead.cc  JadeReader.cc  JadeRegCtrl.cc  JadeUtils.cc  JadeWrite.cc  JadeWriter.cc  Test1Reader.cc  Test2Reader.cc  TestFilter.cc  TestManager.cc  TestMonitor.cc  TestReader.cc  TestRegCtrl.cc  TestWriter.cc  base64.cc  cxa_demangle.cc  daq.cpp  undname.c
software/lib/core/swig/: CMakeLists.txt  daq.i  setup.py  setup.py.in
software/lib/core/swig/python/: CMakeLists.txt
software/lib/decode/: CMakeLists.txt
software/lib/decode/include/: JadepixDecoder.hh  JadepixFrame.hh
software/lib/decode/macros/: runDecoder.py
software/lib/decode/src/: JadepixDecoder.cpp  JadepixFrame.cpp
software/lib/decode/swig/: CMakeLists.txt
software/lib/decode/swig/python/: CMakeLists.txt
software/lib/eudaq/: CMakeLists.txt
software/lib/eudaq/include/: EudaqManager.hh  EudaqWriter.hh
software/lib/eudaq/src/: EudaqManager.cc  EudaqWriter.cc  JadeProducer.cc  JadeRawEvent2LCEventConverter.cc  JadeRawEvent2StdEventConverter.cc
software/lib/gui/: CMakeLists.txt
src/: daq.cpp  pcie_diver.cpp  streamreadmain.c
swig/: daq.cpp  daq.h  daq.i  daq2.cpp  daq2.h  daq2.i  daq2_private.h  note  setup.py
swig/msvc/: DAQModule.sln
swig/python/: CMakeLists.txt  test.py
test/dat/: Readme.md
xillybus/: ClockDividerInteger.v  pcie diver.vi  pcie_diver.h  xillybus.v  xillydemo.v
xillybus/demoapps/: Makefile  fifo.c  memread.c  memwrite.c  streamread.c  streamwrite.c  winstreamread.c
xillybus/precompiled-demoapps/: async_fifo.txt
(+319 files in other folders)
